37. Building the About Section - Part 3

--- a/Natours/sass/base/_utilities.scss
+++ b/Natours/sass/base/_utilities.scss
@@ -3,6 +3,6 @@
   text-align: center;
 }
 
-.u-margin-bottom-8 {
-  margin-bottom: 8rem;
-}
+.u-margin-bottom-small { margin-bottom: 2rem; }
+.u-margin-bottom-medium { margin-bottom: 4rem; }
+.u-margin-bottom-big { margin-bottom: 8rem; }
