--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+
   &:link,
   &:visited {
     text-transform: uppercase;
@@ -20,12 +21,12 @@
       opacity: 0;
     }
   }
-  
+
   &:active {
     transform: translateY(-.1rem);
     box-shadow: 0 .5rem 1rem rgba($color-black, .2);
   }
-  
+
   &--white {
     background-color: $color-white;
     color: $color-grey-dark;
@@ -34,7 +35,16 @@
       background-color: $color-white;
     }
   }
-  
+
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
+
   &::after {
     content: "";
     display: inline-block;
@@ -47,7 +57,7 @@
     z-index: -1;
     transition: all .4s;
   }
-  
+
   &--animated {
     animation: moveInBottom .5s ease-out .75s;
     animation-fill-mode: backwards;
@@ -55,6 +65,7 @@
 }
 
 .btn-text {
+
   &:link,
   &:visited {
     font-size: $default-font-size;
