--- a/Natours/sass/base/_utilities.scss
+++ b/Natours/sass/base/_utilities.scss
@@ -1,11 +1,11 @@
 .u-center-text {
   // center inline-block child
-  text-align: center;
+  text-align: center !important;
 }
 
-.u-margin-bottom-small { margin-bottom: 2rem; }
-.u-margin-bottom-medium { margin-bottom: 4rem; }
-.u-margin-bottom-big { margin-bottom: 8rem; }
+.u-margin-bottom-small { margin-bottom: 2rem !important; }
+.u-margin-bottom-medium { margin-bottom: 4rem !important; }
+.u-margin-bottom-big { margin-bottom: 8rem !important; }
 
-.u-margin-top-big { margin-top: 8rem; }
-.u-margin-top-huge { margin-top: 10rem; }
+.u-margin-top-big { margin-top: 8rem !important; }
+.u-margin-top-huge { margin-top: 10rem !important; }
