--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -122,10 +122,7 @@
 
   // BACK SIDE STYLING
   &__cta {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include absCenter;
     width: 90%;
     text-align: center;
   }
