--- a/Natours/sass/components/_form.scss
+++ b/Natours/sass/components/_form.scss
@@ -80,10 +80,7 @@
       height: 1.3rem;
       width: 1.3rem;
       border-radius: 50%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      @include absCenter;
       background-color: $color-primary;
       opacity: 0;
       transition: opacity .2s;
