57. Writing Media Queries - Base, Typography and Layout

--- a/Natours/sass/layout/_grid.scss
+++ b/Natours/sass/layout/_grid.scss
@@ -3,9 +3,18 @@
   // center block element
   margin: 0 auto;
 
+  @include respond(tab-port) {  // width < 900px ?
+    max-width: 50%;
+    padding: 0 3rem;
+  }
+
   // select everything except last child
   &:not(:last-child) {
     margin-bottom: $gutter-vertical;
+
+    @include respond(tab-port) {  // width < 900px ?
+      margin-bottom: $gutter-vertical-small;
+    }
   }
 
   @include clearfix;
@@ -16,6 +25,15 @@
 
     &:not(:last-child) {
       margin-right: $gutter-horizontal;
+
+      @include respond(tab-port) {  // width < 900px ?
+        margin-right: 0;
+        margin-bottom: $gutter-vertical-small;
+      }
+    }
+
+    @include respond(tab-port) {  // width < 900px ?
+      width: 100% !important;
     }
   }
 
