--- a/Natours/sass/base/_base.scss
+++ b/Natours/sass/base/_base.scss
@@ -23,5 +23,10 @@ html {
 }
 
 body {
-  box-sizing: border-box; 
+  box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
