--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
   /* font-size: 16px; */
   line-height: 1.7;
   color: $color-grey-dark;
-  padding: 3rem;
 }
 
 .heading-primary {
@@ -24,6 +23,11 @@ body {
     animation-duration: 1s;
     animation-timing-function: ease-out;
     /* animation-delay: 3s; */
+
+    @include respond(phone) {  // width < 600px ?
+      font-size: 5rem;
+      letter-spacing: 1rem;
+    }
   }
   
   &--sub {
@@ -33,6 +37,10 @@ body {
     letter-spacing: 1.75rem;
   
     animation: moveInRight 1s ease-out;
+
+    @include respond(phone) {  // width < 600px ?
+      letter-spacing: .5rem;
+    }
   }
 }
 
@@ -46,6 +54,14 @@ body {
   color: transparent;
   letter-spacing: .2rem;
   transition: all .2s;
+
+  @include respond(tab-port) {  // width < 900px ?
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {  // width < 600px ?
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
