--- a/Natours/sass/layout/_footer.scss
+++ b/Natours/sass/layout/_footer.scss
@@ -4,9 +4,17 @@
   font-size: 1.4rem;
   color: $color-grey-light-1;
 
+  @include respond(tab-port) {  // width < 900px ?
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
+
+    @include respond(tab-port) {  // width < 900px ?
+      margin-bottom: 6rem;
+    }
   }
 
   &__logo {
@@ -18,6 +26,11 @@
     border-top: 1px solid $color-grey-dark;
     padding-top: 2rem;
     display: inline-block;
+
+    @include respond(tab-port) {  // width < 900px ?
+      width: 100%;
+      text-align: center;
+    }
   }
   
   &__list {
@@ -56,5 +69,10 @@
     padding-top: 2rem;
     width: 80%;
     float: right;
+
+    @include respond(tab-port) {  // width < 900px ?
+      width: 100%;
+      float: none;
+    }
   }
 }
