--- a/Natours/sass/base/_utilities.scss
+++ b/Natours/sass/base/_utilities.scss
@@ -4,8 +4,21 @@
 }
 
 .u-margin-bottom-small { margin-bottom: 2rem !important; }
-.u-margin-bottom-medium { margin-bottom: 4rem !important; }
-.u-margin-bottom-big { margin-bottom: 8rem !important; }
+.u-margin-bottom-medium { 
+  margin-bottom: 4rem !important; 
+
+  @include respond(tab-port) {  // width < 900px ?
+    margin-bottom: 3rem !important; 
+  }
+}
+
+.u-margin-bottom-big { 
+  margin-bottom: 8rem !important; 
+
+  @include respond(tab-port) {  // width < 900px ?
+    margin-bottom: 5rem !important; 
+  }
+}
 
 .u-margin-top-big { margin-top: 8rem !important; }
 .u-margin-top-huge { margin-top: 10rem !important; }
