--- a/Natours/sass/components/_form.scss
+++ b/Natours/sass/components/_form.scss
@@ -16,6 +16,10 @@
     display: block;
     transition: all .3s;
 
+    @include respond(tab-port) {  // width < 900px ?
+      width: 100%;
+    }
+
     &:focus {
       outline: none;
       box-shadow: 0 1rem 2rem rgba($color-black, .2);
@@ -51,6 +55,11 @@
   &__radio-group {
     width: 49%;
     display: inline-block;
+
+    @include respond(tab-port) {  // width < 900px ?
+      width: 100%;
+      margin-bottom: 2rem;
+    }
   }
 
   &__radio-input {
