--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -60,16 +60,45 @@
       105deg, 
       rgba($color-white, 0.9) 0%, 
       rgba($color-white, 0.9) 50%, 
-      transparent 50%), 
+      transparent 50%
+    ), 
     url(../img/nat-10.jpg);
-  background-size: cover;
+  background-size: 100%;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
 
-  height: 50rem;
+  @include respond(tab-land) {  // width < 1200px ?
+    background-image: 
+      linear-gradient(
+        105deg, 
+        rgba($color-white, 0.9) 0%, 
+        rgba($color-white, 0.9) 65%, 
+        transparent 65%
+      ), 
+      url(../img/nat-10.jpg);
+    background-size: cover;
+  }
+
+  @include respond(tab-port) {  // width < 900px ?
+    background-image: 
+      linear-gradient(
+        to right, 
+        rgba($color-white, 0.9) 0%, 
+        rgba($color-white, 0.9) 100%
+      ), 
+      url(../img/nat-10.jpg);
+  }
 
   &__form {
     width: 50%;
     padding: 6rem;
+
+    @include respond(tab-land) {  // width < 1200px ?
+      width: 65%;
+    }
+
+    @include respond(tab-port) {  // width < 900px ?
+      width: 100%;
+    }
   }
 }
