--- a/Natours/sass/components/_popup.scss
+++ b/Natours/sass/components/_popup.scss
@@ -10,6 +10,13 @@
   visibility: hidden;
   transition: all .3s;
 
+  @supports(-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
+    // only work in safari
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba($color-black, .3);
+  }
+
   &__content {
     @include absCenter;
     width: 75%;
