75. Building the Header - Part 1

--- a/trillo/css/style.css
+++ b/trillo/css/style.css
@@ -73,3 +73,18 @@ body {
 .hotel-view {
   background-color: var(--color-white);
   flex: 1; }
+
+.logo {
+  height: 3.25rem; }
+
+.search__icon {
+  height: 2rem;
+  width: 2rem; }
+
+.user-nav__icon {
+  height: 2.25rem;
+  width: 2.25rem; }
+
+.user-nav__user-photo {
+  height: 3.75rem;
+  border-radius: 50%; }
