78. Building the Navigation - Part 1

--- a/trillo/sass/_components.scss
+++ b/trillo/sass/_components.scss
@@ -118,3 +118,28 @@
   }
 
 }
+
+// SIDE NAVIGATION
+.side-nav {
+  
+  &__item {
+
+  }
+
+  &__link {
+
+  }
+
+  &__icon {
+    width: 1.75rem;
+    height: 1.75rem;
+  }
+}
+
+// LEGAL TEXT
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-light-4);
+  text-align: center;
+  padding: 2.5rem;
+}
