--- a/trillo/sass/_layout.scss
+++ b/trillo/sass/_layout.scss
@@ -26,10 +26,14 @@
   background-color: var(--color-grey-dark-1);
   
   flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view {
   background-color: var(--color-white);
-  
   flex: 1;
+
+  height: 80rem;
 }
