79. Building the Navigation - Part 2

--- a/trillo/sass/_components.scss
+++ b/trillo/sass/_components.scss
@@ -121,18 +121,26 @@
 
 // SIDE NAVIGATION
 .side-nav {
-  
-  &__item {
 
-  }
+  &__link:link,
+  &__link:visited {
+    color: var(--color-grey-light-1);
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
+    padding: 1.5rem 3rem;
+    position: relative;
+    z-index: 10;
 
-  &__link {
-
+    display: flex;
+    align-items: center;
   }
 
   &__icon {
     width: 1.75rem;
     height: 1.75rem;
+    margin-right: 2rem;
+    fill: currentColor;
   }
 }
 
