--- a/trillo/css/style.css
+++ b/trillo/css/style.css
@@ -158,9 +158,22 @@ body {
     border-radius: 50%;
     margin-right: 1rem; }
 
+.side-nav__link:link, .side-nav__link:visited {
+  color: var(--color-grey-light-1);
+  text-decoration: none;
+  text-transform: uppercase;
+  display: block;
+  padding: 1.5rem 3rem;
+  position: relative;
+  z-index: 10;
+  display: flex;
+  align-items: center; }
+
 .side-nav__icon {
   width: 1.75rem;
-  height: 1.75rem; }
+  height: 1.75rem;
+  margin-right: 2rem;
+  fill: currentColor; }
 
 .legal {
   font-size: 1.2rem;
