80. Building the Hotel Overview - Part 1

--- a/trillo/css/style.css
+++ b/trillo/css/style.css
@@ -180,3 +180,18 @@ body {
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.5rem; }
+
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    width: 100%;
+    display: block; }
+
+.overview {
+  display: flex; }
+  .overview__stars {
+    margin-right: auto; }
+  .overview__icon-star, .overview__icon-location {
+    width: 1.75em;
+    height: 1.75em;
+    fill: var(--color-primary); }
