--- a/trillo/sass/_base.scss
+++ b/trillo/sass/_base.scss
@@ -34,6 +34,10 @@ Grey dark 3: #999
   --color-grey-dark-3: #999;
 
   --shadow-dark: 0 2rem 6rem rbga(0, 0, 0, .3);
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, .06);
+
+  --line: 1px solid var(--color-grey-light-2);
+
 }
 
 * {
