--- a/trillo/sass/_components.scss
+++ b/trillo/sass/_components.scss
@@ -166,7 +166,7 @@
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
 
   &__heading {
     font-size: 2.25rem;
