88. Wrapping up the Trillo Project: Final Considerations

--- a/trillo/sass/_components.scss
+++ b/trillo/sass/_components.scss
@@ -395,16 +395,19 @@
     width: 1rem;
     margin-right: .7rem;
 
-    // older browser
-    // background-image: url(../img/chevron-thin-right.svg);
-    // background-size: cover;
+    // Older browsers
+    background-image: url(../img/chevron-thin-right.svg);
+    background-size: cover;
 
-    // newer browser
-    background-color: var(--color-primary);
-    -webkit-mask-image: url(../img/chevron-thin-right.svg);
-    -webkit-mask-size: cover;
-    mask-image: url(../img/chevron-thin-right.svg);
-    mask-size: cover;
+    //Newer browsers - masks
+    @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+      background-color: var(--color-primary);
+      -webkit-mask-image: url(../img/chevron-thin-right.svg);
+      -webkit-mask-size: cover;
+      mask-image: url(../img/chevron-thin-right.svg);
+      mask-size: cover;
+      background-image: none;
+    }
   }
 }
 
