107. Building the Overall Layout - Part 2

--- a/nexter/sass/_base.scss
+++ b/nexter/sass/_base.scss
@@ -37,4 +37,12 @@ body {
 .container {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  // 1140 / 0 = 140px = 14rem
+  // center content on the page up to 1140px
+  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+
+  & > * {
+    padding: 40px;
+    font-size: 3rem;
+  }
 }
