--- a/nexter/sass/_header.scss
+++ b/nexter/sass/_header.scss
@@ -13,6 +13,14 @@
   grid-row-gap: 1.5rem;
   justify-content: center;
 
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: 1 / -1;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 5rem;
+  }
+
   &__logo {
     height: 3rem;
     justify-self: center;
@@ -49,7 +57,7 @@
     align-items: center;
 
     img {
-      height: 2.5rem;
+      max-height: 2.5rem;
       max-width: 100%;
       filter: brightness(70%);
     }
